correct height computing for parent first-child margin collapsing and background-color, and function to get x,y including border and padding

--- a/examples/style.css
+++ b/examples/style.css
@@ -1,7 +1,12 @@
 div {
-  padding-top: 10px;
+  background-color: blue;
 }
 
 p {
+}
+
+.pw {
+  color: white;
+  padding-top: 10px;
 }
 
